# New-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP.md  SETUP_SUMMARY.md  WRAPPER_GUIDE.md  decompiler.py  docker-compose.yml  environment-report.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  web2apk.py  wrapper_generator.py
apk_decompiler/: __init__.py  __main__.py  cli.py  dependency_checker.py  logger.py  template_manager.py  validator.py  wrapper_cli.py
exrey/platform/chromium/: manifest.json
exrey/scripts/: sync-upstream.sh
exrey/src/: 1p-filters.html  3p-filters.html  about.html  advanced-settings.html  background.html  blank.html  dashboard.html  devtools.html  document-blocked.html  dyna-rules.html  logger-ui.html  no-dashboard.html  popup-fenix.html  settings.html  support.html  whitelist.html
exrey/src/_locales/ar/: messages.json
exrey/src/_locales/az/: messages.json
exrey/src/_locales/be/: messages.json
exrey/src/_locales/bg/: messages.json
exrey/src/_locales/bn/: messages.json
exrey/src/_locales/br_FR/: messages.json
exrey/src/_locales/bs/: messages.json
exrey/src/_locales/ca/: messages.json
exrey/src/_locales/cs/: messages.json
exrey/src/_locales/cv/: messages.json
exrey/src/_locales/cy/: messages.json
exrey/src/_locales/da/: messages.json
exrey/src/_locales/de/: messages.json
exrey/src/_locales/el/: messages.json
exrey/src/_locales/en/: messages.json
exrey/src/_locales/en_GB/: messages.json
exrey/src/_locales/eo/: messages.json
exrey/src/_locales/es/: messages.json
exrey/src/_locales/et/: messages.json
exrey/src/_locales/eu/: messages.json
exrey/src/_locales/fa/: messages.json
exrey/src/_locales/fi/: messages.json
exrey/src/_locales/fil/: messages.json
exrey/src/_locales/fr/: messages.json
exrey/src/_locales/fy/: messages.json
exrey/src/_locales/gl/: messages.json
exrey/src/_locales/gu/: messages.json
exrey/src/_locales/he/: messages.json
exrey/src/_locales/hi/: messages.json
exrey/src/_locales/hr/: messages.json
exrey/src/_locales/hu/: messages.json
exrey/src/_locales/hy/: messages.json
exrey/src/_locales/id/: messages.json
exrey/src/_locales/it/: messages.json
exrey/src/_locales/ja/: messages.json
exrey/src/_locales/ka/: messages.json
exrey/src/_locales/kk/: messages.json
exrey/src/_locales/kn/: messages.json
exrey/src/_locales/ko/: messages.json
exrey/src/_locales/lt/: messages.json
exrey/src/_locales/lv/: messages.json
exrey/src/_locales/mk/: messages.json
exrey/src/_locales/ml/: messages.json
exrey/src/_locales/mr/: messages.json
exrey/src/_locales/ms/: messages.json
exrey/src/_locales/nb/: messages.json
exrey/src/_locales/nl/: messages.json
exrey/src/_locales/oc/: messages.json
exrey/src/_locales/pa/: messages.json
exrey/src/_locales/pl/: messages.json
exrey/src/_locales/pt_BR/: messages.json
exrey/src/_locales/pt_PT/: messages.json
exrey/src/_locales/ro/: messages.json
exrey/src/_locales/ru/: messages.json
exrey/src/_locales/si/: messages.json
exrey/src/_locales/sk/: messages.json
exrey/src/_locales/sl/: messages.json
exrey/src/_locales/so/: messages.json
exrey/src/_locales/sq/: messages.json
exrey/src/_locales/sr/: messages.json
exrey/src/_locales/sv/: messages.json
exrey/src/_locales/sw/: messages.json
exrey/src/_locales/ta/: messages.json
exrey/src/_locales/te/: messages.json
exrey/src/_locales/th/: messages.json
exrey/src/_locales/tr/: messages.json
exrey/src/_locales/uk/: messages.json
exrey/src/_locales/ur/: messages.json
exrey/src/_locales/vi/: messages.json
exrey/src/_locales/zh_CN/: messages.json
exrey/src/_locales/zh_TW/: messages.json
exrey/src/css/: 1p-filters.css  asset-viewer.css  click2load.css  codemirror.css  common.css  document-blocked.css  logger-ui.css
exrey/src/css/themes/: default.css
exrey/src/js/: 1p-filters.js  3p-filters.js  about.js  advanced-settings.js  arglist-parser.js  asset-viewer.js  assets.js  background.js  base64-custom.js  benchmarks.js  biditrie.js  broadcast.js  cachestorage.js  click2load.js  cloud-ui.js  code-viewer.js  commands.js  console.js  contentscript-extra.js  contentscript.js  contextmenu.js  cosmetic-filtering.js  dashboard-common.js  dashboard.js  devtools.js  diff-updater.js  document-blocked.js  dom-inspector.js  dom.js  dyna-rules.js  dynamic-net-filtering.js  epicker-ui.js  fa-icons.js  filtering-context.js  filtering-engines.js  hnswitches.js  hntrie.js  html-filtering.js  httpheader-filtering.js  i18n.js  (+39 more)
scripts/: check_tools.py  check_tools.sh  install-tools.sh  install_tools.sh  quick-setup.sh  update-tools.sh  validate-env.sh  validate-setup.py  verify-tools.sh
src/: __init__.py
templates/android_wrapper/: README.md  TEMPLATE_INFO.md  build.gradle  gradlew  settings.gradle
templates/android_wrapper/app/: build.gradle  proguard-rules.pro
templates/android_wrapper/app/src/main/: AndroidManifest.xml
templates/android_wrapper/app/src/main/assets/: offline.html
templates/android_wrapper/app/src/main/java/com/template/webview/: MainActivity.kt  OfflineHandler.kt
templates/android_wrapper/app/src/main/res/layout/: activity_main.xml
templates/android_wrapper/app/src/main/res/values/: strings.xml  themes.xml
tests/: __init__.py  test_cli.py  test_config_loader.py  test_template_build.py  test_template_manager.py  test_validators.py
web2apk/: __init__.py  cli.py  config_loader.py  dependency_checker.py  logger.py  validators.py
