[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apk-decompiler-cli"
version = "1.0.0"
description = "A comprehensive command-line tool for decompiling and analyzing Android APK files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "APK Decompiler Team"},
]
keywords = ["apk", "android", "decompiler", "analysis", "reverse-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1.0",
    "colorama>=0.4.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "androguard>=3.4.0a1",
    "pycryptodome>=3.18.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "python-json-logger>=2.0.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pylint>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/apk-decompiler-cli"
Documentation = "https://github.com/yourusername/apk-decompiler-cli/blob/main/README.md"
Repository = "https://github.com/yourusername/apk-decompiler-cli"
Issues = "https://github.com/yourusername/apk-decompiler-cli/issues"

[tool.setuptools]
packages = ["apk_decompiler"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["apk_decompiler"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
